# atlas-plugin

./: .gitignore  .gitleaksignore  ARCHITECTURE.md  BENCHMARK-V6.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  DEPLOYMENT.md  MIGRATION-V5-TO-V6.md  MIGRATION-V6-TO-V6.1.md  Makefile  ONBOARDING-EXTERNAL.md  ONBOARDING.md  PARALLELISM.md  QUICKSTART-V5.md  README.md  VALIDATION-V6.md  VERSION  build.sh  known_marketplaces.json  package.json  pyproject.toml  pytest.ini  settings.json
.blueprint/: AGENT-TEAMS-PLAYBOOK.md  ARCHITECTURE.md  INDEX.md  INTEGRATION-MAP.md  LAUNCHER-PLAYBOOK.md  PATTERNS.md  SKILL-CATALOG.md  TESTING.md  VISION.md
.claude/: decisions.jsonl
.claude-plugin/: marketplace.json  plugin.json
.woodpecker/: auto-release.yml  ci.yml  mirror-github.yml  publish.yml  security.yml  skill-eval.yml  skill-security.yml
cli/: index.js  index.ts
commands/: _metadata.yaml  ask.md  atlas-dev.md  atlas.md  audit-enterprise.md  audit.md  board.md  brainstorm.md  brief.md  browse.md  ci.md  context.md  continue.md  cost.md  debug.md  deploy.md  design.md  dev-self.md  dev.md  doctor.md  dream.md  end.md  eng.md  estimate.md  eval.md  handoff.md  health.md  hooks.md  idea.md  infra.md  ingest.md  knowledge.md  learn.md  location.md  notes.md  onboard.md  pickup.md  plan-status.md  plan.md  present.md  (+21 more)
docs/: CLAUDE-CODE-SETUP.md  CSO-AUDIT-2026-04-19.md  INSTALL.md  MIGRATION-GUIDE.md  PHILOSOPHY.md  PROFILE-SYSTEM.md  SECURITY.md  SKILL-AUTHORING.md  pilot-gmining-onboarding.md
evals/: __init__.py  __main__.py  codebase.py  discovery.py  experiment.py  gate.py  generate_cases.py  judge.py  reporter.py  run.sh  runner.py  schema.py  scorer.py  structural.py
hooks/: affect-signal  atlas-lock-acquire  atlas-lock-release  atlas-status-writer  auto-learn  auto-tail-agent  autonomy-gate.sh  ci-audit-log  cleanup-worktrees  code-quality-check  context-budget-guardian  context-threshold-injector  daimon-context-injector  effort-router  enterprise-check  feature-drift-detector  frontend-ux-gate  git-guardrails.sh  hooks.json  inject-meta-skill  memory-auto-index.sh  post-compact  (+28 more)
services/atlas-exchange/: Dockerfile  README.md  main.py  pyproject.toml
(+586 files in other folders)
